
idf_component_register( SRCS "Bsp1_Main.cpp"
                             "Bsp1_GenModules.cpp"
							 "Bsp2_Mean3.cpp"
					 
							 
							 
  INCLUDE_DIRS "." 
               "../components/dsp" 
               "../components/RtEnvHL/commu"
               "../components/RtEnvHL/core"
               "../components/RtEnvHL/led_strip"
)

